<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.fitnessandnutritionbuddy.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.fitnessandnutritionbuddy.ui.search.SearchFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_meals"
        android:name="com.example.fitnessandnutritionbuddy.ui.map.MealsFragment"
        android:label="Meal"
        tools:layout="@layout/fragment_meals" />

    <fragment
        android:id="@+id/navigation_planning"
        android:name="com.example.fitnessandnutritionbuddy.ui.planning.PlanningFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_planning" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.fitnessandnutritionbuddy.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />


</navigation>