<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.CustomMealActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/enter_custom_meal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Enter Custom Meal"
        android:textSize="34sp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="25dp">



        <TextView
            android:id="@+id/meal_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meal_name"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/editTextMealName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Food Name"
            android:inputType="text"
            android:minHeight="48dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/meal_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meal_brand"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextMealBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Brand of food"
            android:inputType="text" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/meal_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meal_calories"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextMealCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Calories per serving"
            android:inputType="number" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/meal_servings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Servings"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextMealServings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Servings eaten"
            android:inputType="number" />



    </LinearLayout>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/meal_protein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Protein"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextMealProtein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="protein (grams)"
            android:inputType="number" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/meal_fat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Fat"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextMealFat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="fat (grams)"
            android:inputType="number" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/meal_sugars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sugars"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextMealSugars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="sugars (grams)"
            android:inputType="number" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/meal_carbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Carbs"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextMealCarbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="carbs (grams)"
            android:inputType="number" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/meal_fiber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fiber"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextMealFiber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="fiber (grams)"
            android:inputType="number" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/mealTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="10dp"
            android:text="Type"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/mealTypeSpinner"
            android:layout_width="208dp"
            android:layout_height="28dp"
            android:layout_marginStart="10dp" />



    </LinearLayout>





    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/add_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="Add Meal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.468"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextMealServings" />
    </LinearLayout>

</LinearLayout>